crates/fixtures/tests/snapshots/hostile__content_emphasis_overlap.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "é",
            "glyphs": [
              {
                "id": 263,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 3
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 0,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 5745,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 5745,
                  "y": 11551
                }
              },
              {
                "line": {
                  "x": 0,
                  "y": 11551
                }
              },
              "close"
            ],
            "fill": [
              0,
              0,
              0,
              255
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              160,
              20,
              80,
              0
            ],
            "text": " office ",
            "glyphs": [
              {
                "id": 1,
                "x": 5745,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 42,
                "x": 8370,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 418,
                "x": 14554,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 5
                }
              },
              {
                "id": 30,
                "x": 24917,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 32,
                "x": 30414,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 1,
                "x": 36159,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 5745,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 11551
                }
              },
              {
                "line": {
                  "x": 5745,
                  "y": 11551
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 5745,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 7778
                }
              },
              {
                "line": {
                  "x": 5745,
                  "y": 7778
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              160,
              20,
              80,
              0
            ],
            "text": "אבג",
            "glyphs": [
              {
                "id": 0,
                "x": 38784,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 0,
                "x": 45993,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 4
                }
              },
              {
                "id": 0,
                "x": 53202,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 2
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 38784,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 11551
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 11551
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 38784,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 7778
                }
              },
              {
                "line": {
                  "x": 38784,
                  "y": 7778
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              160,
              20,
              80,
              0
            ],
            "text": " ​ ",
            "glyphs": [
              {
                "id": 1,
                "x": 60411,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 1,
                "x": 63036,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 63036,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 60411,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 11551
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 11551
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 60411,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 7778
                }
              },
              {
                "line": {
                  "x": 60411,
                  "y": 7778
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              160,
              20,
              80,
              0
            ],
            "text": "zero invisible",
            "glyphs": [
              {
                "id": 53,
                "x": 65661,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 70797,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 76542,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 81194,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 87378,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 36,
                "x": 90003,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 41,
                "x": 93360,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 49,
                "x": 99848,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 36,
                "x": 105536,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 46,
                "x": 108893,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 36,
                "x": 113782,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 29,
                "x": 117139,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 39,
                "x": 123526,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 32,
                "x": 126883,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 65661,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 132628,
                  "y": 10988
                }
              },
              {
                "line": {
                  "x": 132628,
                  "y": 11551
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 11551
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          },
          {
            "type": "path",
            "path": [
              {
                "move": {
                  "x": 65661,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 132628,
                  "y": 7215
                }
              },
              {
                "line": {
                  "x": 132628,
                  "y": 7778
                }
              },
              {
                "line": {
                  "x": 65661,
                  "y": 7778
                }
              },
              "close"
            ],
            "fill": [
              160,
              20,
              80,
              0
            ],
            "stroke": null,
            "layer": "content"
          }
        ]
      }
    ]
  }
]
