crates/fixtures/tests/snapshots/hostile__content_float_wider_than_frame.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 102400,
    "height": 61440,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 0,
          "ty": 0
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 10240,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Anchor text.",
            "glyphs": [
              {
                "id": 2,
                "x": 0,
                "y": 9733,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 6799,
                "y": 9733,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 30,
                "x": 13004,
                "y": 9733,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 35,
                "x": 17888,
                "y": 9733,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 42,
                "x": 24042,
                "y": 9733,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 45,
                "x": 29664,
                "y": 9733,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 1,
                "x": 33996,
                "y": 9733,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 47,
                "x": 36382,
                "y": 9733,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 32,
                "x": 39710,
                "y": 9733,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 51,
                "x": 44932,
                "y": 9733,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 47,
                "x": 50318,
                "y": 9733,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 473,
                "x": 53646,
                "y": 9733,
                "text": {
                  "start": 11,
                  "end": 12
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
