crates/fixtures/tests/snapshots/hostile__content_font_chain_missing.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Fallback ",
            "glyphs": [
              {
                "id": 7,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 6060,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 39,
                "x": 11793,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 15150,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 29,
                "x": 18507,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 28,
                "x": 25006,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 30739,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 38,
                "x": 36112,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 42273,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "􏿿",
            "glyphs": [
              {
                "id": 0,
                "x": 44898,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Fallback ",
            "glyphs": [
              {
                "id": 7,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 28,
                "x": 6060,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 39,
                "x": 11793,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 39,
                "x": 15150,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 29,
                "x": 18507,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 28,
                "x": 25006,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 30739,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 38,
                "x": 36112,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 42273,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "􏿿",
            "glyphs": [
              {
                "id": 0,
                "x": 44898,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 4
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
