crates/fixtures/tests/snapshots/hostile__content_font_collection_index.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Code Pro",
              "hash": "9f9664e2edf6f045c11e774f9bd0be69"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "index fallback",
            "glyphs": [
              {
                "id": 36,
                "x": 0,
                "y": 10763,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 41,
                "x": 6758,
                "y": 10763,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 31,
                "x": 13516,
                "y": 10763,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 32,
                "x": 20274,
                "y": 10763,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 51,
                "x": 27032,
                "y": 10763,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 1,
                "x": 33790,
                "y": 10763,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 33,
                "x": 40548,
                "y": 10763,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 28,
                "x": 47306,
                "y": 10763,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 39,
                "x": 54064,
                "y": 10763,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 39,
                "x": 60822,
                "y": 10763,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 29,
                "x": 67580,
                "y": 10763,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 28,
                "x": 74338,
                "y": 10763,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 30,
                "x": 81096,
                "y": 10763,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 38,
                "x": 87854,
                "y": 10763,
                "text": {
                  "start": 13,
                  "end": 14
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
